force-app/main/default/objects/Medical_History__c/Medical_History__c.object-meta.xml
<CustomObject>
    <label>Medical History</label>
    <nameField>
        <displayFormat>MH{00000}</displayFormat>
        <label>Medical history Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>