force-app/main/default/objects/Medical_History__c/fields/Disease__c.field-meta.xml
<CustomField>
    <fullName>Disease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disease</label>
    <referenceTo>Disease__c</referenceTo>
    <relationshipLabel>Medical Histories</relationshipLabel>
    <relationshipName>Medical_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>