force-app/main/default/objects/Medical_History__c/listViews/Patient_Notes.listView-meta.xml
<ListView>
    <fullName>Patient_Notes</fullName>
    <columns>NAME</columns>
    <columns>Disease__c</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Patient Notes</label>
</ListView>